--- a/q/275815.html
+++ b/q/275815.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>085</td><td>JavaScript Node.js</td><td>240928T181603Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275855#275855">noodle p</a></td></tr>
-<tr d-ix="1"><td>036</td><td>Uiua</td><td>240928T164813Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275854#275854">noodle p</a></td></tr>
+<tr d-ix="0"><td>038</td><td>Uiua</td><td>240928T164813Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275854#275854">noodle p</a></td></tr>
+<tr d-ix="1"><td>085</td><td>JavaScript Node.js</td><td>240928T181603Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275855#275855">noodle p</a></td></tr>
 <tr d-ix="2"><td>031</td><td>Vyxal Ḣso</td><td>240927T231612Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275835#275835">emanresu</a></td></tr>
 <tr d-ix="3"><td>099</td><td>Javascript</td><td>240928T025352Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275842#275842">l4m2</a></td></tr>
 <tr d-ix="4"><td>119</td><td>JavaScript ES2019</td><td>240928T040419Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275844#275844">Neil</a></td></tr>
@@ -37,24 +37,24 @@
 <tr d-ix="8"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
 <tr d-ix="9"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 85 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, <sub><s>41</s></sub> 38 bytes</h1>
+<pre><code>&amp;p⍜⊜□⍚($&quot;\x1b[_m_&quot;+×60⁅⚂+30⌊×7⚂)¬⊸∈&quot;\t \n&quot;
+</code></pre>
+<p>where <code>\x1b</code> is a literal ESC byte and <code>\t</code> is a literal tab, both of which are included in the SBCS encoding for Uiua, at least as of 0.13.0-dev-2. (The <code>\n</code> is intentionally two bytes.)</p>
+<p>Explanation:</p>
+<pre class="lang-python prettyprint-override"><code>¬⊸∈&quot;\t\s\n&quot;  # mask of non-whitespace characters
+⍜⊜□⍚(        # apply to each island of corresponding 1s:
+  +30⌊×7⚂      # random integer in [30, 37)
+  +×60⁅⚂       # add 60 with 50% probability
+  $&quot;\x1b[_m_&quot;) # Prepend this ANSI color code to the word
+&amp;p           # print with newline
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 85 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;console.log(s.replace(/\S+/g,s=&gt;`&#27;[${r(2)*60+r(7)+30}m`+s,r=n=&gt;Math.random()*n|0))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGiNNulpSVpuhY3Q4tt7ZLz84rzc1L1cvLTNYr1ilILchKTUzX0Y4K19dN1gPIJ0tEq1UUaRppaZgbaRRrmmtrGBrW5CdrFOkW2ebZ2voklGXpFiXkp-bkamlp5NQaamlDDDdM0EsJTc5Lzc1MVSvK5uJyBdiu45-ekcQFVg3iZeekKzhmJOTmpeempxYoJUI0LFkBoAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>The code includes a raw ESC (0x1B) byte at the start of the template string.</p>
-</div>
-<div id="pu1" class="pu"><h1>Uiua, <sub><s>39</s></sub> 36 bytes</h1>
-<pre><code>⍜⊜□⍚($&quot;\x1b[_m_&quot;+×60⁅⚂+30⌊×7⚂)¬⊸∈&quot;\t \n&quot;
-</code></pre>
-<p>where <code>\x1b</code> is a literal ESC byte and <code>\t</code> is a literal tab, both of which are included in the SBCS encoding for Uiua, at least as of 0.13.0-dev-2. (The <code>\n</code> is intentionally two bytes.)</p>
-<p>Explanation:</p>
-<pre><code>¬⊸∈&quot;\t\s\n&quot; # mask of non-whitespace characters
-⍜⊜□⍚(       # apply to each island of corresponding 1s:
-  +30⌊×7⚂     # random integer in [30, 37)
-  +×60⁅⚂      # add 60 with 50% probability
-  $&quot;\x1b[_m_&quot; # Prepend this ANSI color code to the word
-)
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>Ḣso</code>, 31 bytes</h1>
 <pre><code>`&lt;ß∵&gt;`,`¨|Þ`Ẏƛk66ƈ∑`&lt;¨² ÷¥=#Π&gt;Π
