--- a/q/275821.html
+++ b/q/275821.html
@@ -26,18 +26,38 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Charcoal</td><td>240928T095502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275849#275849">Neil</a></td></tr>
-<tr d-ix="1"><td>010</td><td>Jelly</td><td>240928T183657Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275857#275857">Jonathan</a></td></tr>
-<tr d-ix="2"><td>027</td><td>Retina</td><td>240928T073856Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275846#275846">Neil</a></td></tr>
-<tr d-ix="3"><td>024</td><td>Bash + common utilities</td><td>240927T235348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275838#275838">Digital </a></td></tr>
-<tr d-ix="4"><td>045</td><td>Arturo</td><td>240927T234406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275837#275837">chunes</a></td></tr>
-<tr d-ix="5"><td>027</td><td>J</td><td>240927T233938Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275836#275836">south</a></td></tr>
-<tr d-ix="6"><td>032</td><td>Google Sheets</td><td>240927T153907Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275829#275829">doubleun</a></td></tr>
-<tr d-ix="7"><td>043</td><td>><> Fish</td><td>240927T163730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275831#275831">value1</a></td></tr>
-<tr d-ix="8"><td>8125</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
+<tr d-ix="0"><td>9125</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
+<tr d-ix="1"><td>017</td><td>Charcoal</td><td>240928T095502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275849#275849">Neil</a></td></tr>
+<tr d-ix="2"><td>010</td><td>Jelly</td><td>240928T183657Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275857#275857">Jonathan</a></td></tr>
+<tr d-ix="3"><td>027</td><td>Retina</td><td>240928T073856Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275846#275846">Neil</a></td></tr>
+<tr d-ix="4"><td>024</td><td>Bash + common utilities</td><td>240927T235348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275838#275838">Digital </a></td></tr>
+<tr d-ix="5"><td>045</td><td>Arturo</td><td>240927T234406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275837#275837">chunes</a></td></tr>
+<tr d-ix="6"><td>027</td><td>J</td><td>240927T233938Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275836#275836">south</a></td></tr>
+<tr d-ix="7"><td>032</td><td>Google Sheets</td><td>240927T153907Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275829#275829">doubleun</a></td></tr>
+<tr d-ix="8"><td>043</td><td>><> Fish</td><td>240927T163730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275831#275831">value1</a></td></tr>
 <tr d-ix="9"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 17 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 73 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 9.125 bytes</h1>
+<pre><code>70ƛd₍‹:&quot;ṄṪ
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIjcwxptk4oKN4oC5Olwi4bmE4bmqIiwiIiwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Bitstring:</p>
+<pre><code>0100110111000100000110110100011100100110101111111110111111001110011000010
+</code></pre>
+<p>This should be fine formatting wise. Outputs <code>roundNo ⟨ part1 | part2 </code>.</p>
+<p>Also, <s>BT6? More like BalaTro for 6 hours on mobile</s></p>
+<h2>Explained</h2>
+<pre><code>70ƛd₍‹:&quot;Ṅ­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁤⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁢⁢​‎‏​⁢⁠⁡‌­
+70ƛ        # ‎⁡Over the range [1, 70]
+   d       # ‎⁢  Double each number n
+    ₍‹:    # ‎⁣  And push [n - 1, n]. This is slightly shorter than :‹$&quot;
+       &quot;   # ‎⁤  Pair with n
+# ‎⁢⁢The j flag joins on newlines
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 17 bytes</h1>
 <pre><code>Ｅ⁷⁰⁺⁺⁺⁺⊕ι ⊕⊗ι,⊗⊕ι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3sUDD3EBHISCntFgDjfDMSy5KzU3NK0lN0cjU1FFQUlACksiiLvmlSTlgWU2QvA5IHiaGqhsErP///69blgMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -65,7 +85,7 @@
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjdLA4oy80o0fBMLNMwNdBQCckqLNZCIxJSgzPSMEg3PvOSi1NzUvJLUFI1MTR0FYyBGFnPJL03KActpAmWUdJSAJEwMVS8IWC8pTkouhjphebSSblmOUiyUCwA" rel="nofollow noreferrer" title="Charcoal – Attempt This Online">Attempt This Online!</a> Link is to verbose version of code. Explanation: As above except that <code>Pad</code> implicitly casts to string.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 <a href="https://github.com/DennisMitchell/jelly/wiki/code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 <a href="https://github.com/DennisMitchell/jelly/wiki/code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>140s2ĖṾ€€G
 </code></pre>
 <p>A full program that takes no arguments and prints the table where 1-9 are padded with a space on their right and the delimiters are five spaces and <code>,</code>.</p>
@@ -87,7 +107,7 @@
            - implicit print
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 27 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 27 bytes</h1>
 <pre><code>
 70*$(ab
 L$`b
@@ -126,18 +146,18 @@ $.&amp;
 </code></pre>
 <p>Convert to decimal.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a> + common utilities, 24</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="noreferrer">Bash</a> + common utilities, 24</h1>
 
 <pre class="lang-bash prettyprint-override"><code>seq 140|paste -d, - -|nl
 </code></pre>
-<p><a href="https://tio.run/##S0oszvj/vzi1UMHQxKCmILG4JFVBN0VHQVdBtyYv5/9/AA" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##S0oszvj/vzi1UMHQxKCmILG4JFVBN0VHQVdBtyYv5/9/AA" rel="noreferrer" title="Bash – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 45 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 45 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>loop 70'n-&gt;print[pad~&quot;|n|&quot;2~&quot;|dec*2n|,|n*2|&quot;]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?FM5Bn4" rel="nofollow noreferrer">Try it!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 27 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 27 bytes</h1>
 <pre><code>1(&quot;:,TAB,&lt;:@+:&quot;:@,+:)@+i.70
 </code></pre>
 <p>Formats n with <code>2*n-1</code> and <code>2*n</code> using left justify for the round numbers and tab and space for the delimiters.</p>
@@ -154,7 +174,7 @@ $.&amp;
     ,                         NB. concat
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1>Google Sheets, 32 bytes</h1>
+<div id="pu7" class="pu"><h1>Google Sheets, 32 bytes</h1>
 <pre><code>=sort(row(1:70)*{1,2,2}-{0,1,0})
 </code></pre>
 <p><img src="https://i.sstatic.net/jtMbpfRF.png" alt="enter image description here" /></p>
@@ -163,32 +183,12 @@ $.&amp;
 </code></pre>
 <p><img src="https://i.sstatic.net/Da882ED4.png" alt="enter image description here" /></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt; (Fish)</a>, 43 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt; (Fish)</a>, 43 bytes</h1>
 <pre><code>1:::::&quot;G&quot;=?;n&quot; &quot;{a(?:{a(?oo2*:1-n&quot;,&quot;onao1+!
 </code></pre>
 <p>Might be able to be improved, but I couldn't find anything right now.</p>
 <p>Starts with the counter as 1 and loops until exiting on <code>71</code>. Adds a space if the counter is less than <code>10</code>, then makes two copies of the counter times two, then prints that minus one, a comma, the remaining copy, then a newline.</p>
 <p><a href="https://mousetail.github.io/Fish/#eyJ0ZXh0IjoiMTo6Ojo6XCJHXCI9PztuXCIgXCJ7YSg/OnthKD9vbzIqOjEtblwiLFwib25hbzErISIsImlucHV0IjoiIiwic3RhY2siOiIiLCJzdGFja19mb3JtYXQiOiJjaGFycyIsImlucHV0X2Zvcm1hdCI6ImNoYXJzIn0=" rel="nofollow noreferrer">Try it</a></p>
-</div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 65 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 8.125 bytes</h1>
-<pre><code>70ƛd₍‹:&quot;Ṅ
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIjcwxptk4oKN4oC5Olwi4bmEIiwiIiwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Bitstring:</p>
-<pre><code>01001101110001000001101101000111001001101011111111101111110011100
-</code></pre>
-<p>This should be fine formatting wise. Outputs <code>roundNo ⟨ part1 | part2 ⟩</code>.</p>
-<p>Also, <s>BT6? More like BalaTro for 6 hours on mobile</s></p>
-<h2>Explained</h2>
-<pre><code>70ƛd₍‹:&quot;Ṅ­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁤⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁢⁢​‎‏​⁢⁠⁡‌­
-70ƛ        # ‎⁡Over the range [1, 70]
-   d       # ‎⁢  Double each number n
-    ₍‹:    # ‎⁣  And push [n - 1, n]. This is slightly shorter than :‹$&quot;
-       &quot;   # ‎⁤  Pair with n
-# ‎⁢⁢The j flag joins on newlines
-💎
-</code></pre>
-<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 <div id="pu9" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 44 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>for i in {1..70};{
