--- a/q/275853.html
+++ b/q/275853.html
@@ -40,7 +40,7 @@
 <p><a href="http://arturo-lang.io/playground?vGimBO" rel="nofollow noreferrer">Try it!</a></p>
 <p>Takes <code>[a, b, c]</code> as a block and <code>z</code> separately.</p>
 <h3>Explanation</h3>
-<pre><code>$[a,z]-&gt;           ; a function taking a block a and number z
+<pre><code>f:$[a,z]-&gt;         ; a function f taking a block a and number z
 ?z=0-&gt;             ; is z zero? then...
 +                  ; add
 ∑                  ; sum of
