--- a/q/275853.html
+++ b/q/275853.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td></td><td>240929T044103Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275866#275866">Ativader</a></td></tr>
+<tr d-ix="0"><td>012</td><td>Nekomata</td><td>240929T080511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275867#275867">alephalp</a></td></tr>
 <tr d-ix="1"><td>086</td><td>Arturo</td><td>240928T231918Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275864#275864">chunes</a></td></tr>
 <tr d-ix="2"><td>085</td><td>JavaScript Node.js</td><td>240928T222801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275863#275863">l4m2</a></td></tr>
 <tr d-ix="3"><td>091</td><td>JavaScript ES6</td><td>240928T214333Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275861#275861">Arnauld</a></td></tr>
@@ -35,13 +35,24 @@
 <tr d-ix="6"><td>034</td><td>Charcoal</td><td>240928T184702Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275858#275858">Neil</a></td></tr>
 <tr d-ix="7"><td>060</td><td>R</td><td>240928T182326Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275856#275856">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;!-- begin snippet: js hide: false console: true babel: false --&gt;</code></pre>
-</div>
-</div>
-</p>
-<p>This Python code calculates the score for a given set of scientific symbols and special actions in the 7 Wonders board game. It implements the recursive formula described in the problem statement, considering the two different ways to score points based on the number of identical symbols and the number of sets of three different symbols <a href="https://ativader.com/reloader-ativador/" rel="nofollow noreferrer">reloader</a>.</p>
+<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 12 bytes</h1>
+<pre><code>ᵑʰ→::∙$ṁ7*+Å
+</code></pre>
+
+<p>This requires <a href="https://github.com/AlephAlpha/Nekomata/releases/tag/v0.7.0.0" rel="nofollow noreferrer">Nekomata v0.7.0.0</a>, which is not yet on ATO.</p>
+<p>Takes input as <code>z [a,b,c]</code>.</p>
+<pre><code>ᵑʰ→::∙$ṁ7*+Å
+ᵑ               Apply the following function z times:
+ ʰ→               Increment any element of the list [a,b,c]
+   :            Duplicate
+    :∙          Square sum; take the dot product with itself
+      $         Swap
+       ṁ        Minimum
+        7*      Multiply by 7
+          +     Add
+           Å    Find the largest possible value
+</code></pre>
+<p><code>ʰ</code> (<code>\onAny</code>) is a new built-in particle in Nekomata v0.7.0.0.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 86 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>f:$[a,z]-&gt;?z=0-&gt;+∑map a=&gt;[&amp;^2]7*min a-&gt;max map 3'i[f map 3'j-&gt;+?i=j-&gt;1-&gt;0a\[j-1]z-1]
