--- a/q/275815.html
+++ b/q/275815.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>038</td><td>Uiua</td><td>240928T164813Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275854#275854">noodle p</a></td></tr>
+<tr d-ix="0"><td>033</td><td>Uiua</td><td>240928T164813Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275854#275854">noodle p</a></td></tr>
 <tr d-ix="1"><td>091</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
 <tr d-ix="2"><td>085</td><td>JavaScript Node.js</td><td>240928T181603Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275855#275855">noodle p</a></td></tr>
 <tr d-ix="3"><td>031</td><td>Vyxal Ḣso</td><td>240927T231612Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275835#275835">emanresu</a></td></tr>
@@ -37,19 +37,20 @@
 <tr d-ix="8"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
 <tr d-ix="9"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, <sub><s>41</s></sub> 38 bytes</h1>
-<pre><code>&amp;p⍜⊜□⍚($&quot;\x1b[_m_&quot;+×60⁅⚂+30⌊×7⚂)¬⊸∈&quot;\t \n&quot;
+<div id="pu0" class="pu"><h1>Uiua, <sub><s>41</s> <s>38</s></sub> 33 bytes</h1>
+<pre><code>&amp;p⍜⊜□⍚($&quot;\x1b[_m_&quot;+×60⁅⚂+30⌊×7⚂)⊸&gt;@ 
 </code></pre>
-<p>where <code>\x1b</code> is a literal ESC byte and <code>\t</code> is a literal tab, both of which are included in the SBCS encoding for Uiua, at least as of 0.13.0-dev-2. (The <code>\n</code> is intentionally two bytes.)</p>
+<p>Note the trailing space, and that <code>\x1b</code> should be a literal ESC byte, which is included in the SBCS encoding for Uiua, at least as of 0.13.0-dev-2.</p>
 <p>Explanation:</p>
-<pre><code>¬⊸∈&quot;\t \n&quot;   # mask of non-whitespace characters
-⍜⊜□⍚(        # apply to each island of corresponding 1s:
+<pre><code>&gt;@           # mask of all characters greater than space
+⍜⊜□⍚(        # apply to each island of ones:
   +30⌊×7⚂      # random integer in [30, 37)
   +×60⁅⚂       # add 60 times a random boolean
   $&quot;\x1b[_m_&quot;) # Prepend this ANSI color code to the word
 &amp;p           # print with newline
 </code></pre>
-<p><a href="https://i.sstatic.net/yrugB2Y0.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/yrugB2Y0.png" alt="Screenshot of the program runnign" /></a></p>
+<p>Screenshot of (an older version of) the program running:</p>
+<p><a href="https://i.sstatic.net/yrugB2Y0.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/yrugB2Y0.png" alt="" /></a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>92</s> 91 bytes</h1>
 
