--- a/q/275630.html
+++ b/q/275630.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>089</td><td>C Turbo C</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
+<tr d-ix="0"><td>086</td><td>C Turbo C</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
 <tr d-ix="1"><td>403</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
 <tr d-ix="2"><td>123</td><td>Nim</td><td>240923T090113Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275714#275714">Archar G</a></td></tr>
 <tr d-ix="3"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
@@ -41,11 +41,11 @@
 <tr d-ix="12"><td>087</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
 <tr d-ix="13"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://turbo-c.net/" rel="nofollow noreferrer">C (Turbo C)</a>, 89 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://turbo-c.net/" rel="nofollow noreferrer">C (Turbo C)</a>, <s>89</s> 86 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>main(c,n){for(n=0;n&lt;4;write(1,&quot;\r    \r****&quot;,(c-8?c&gt;47&amp;c&lt;58?++n:n:n?--n:n)+6))c=getch();}
+<pre class="lang-c prettyprint-override"><code>main(n,c){for(;write(1,&quot;\r    \r****&quot;,(c-8?c&gt;47&amp;c&lt;58?++n:n:n?--n:n)+5)&lt;10;)c=getch();}
 </code></pre>
-<p><a href="https://onlinegdb.com/IYxeotIM3" rel="nofollow noreferrer">Interactive Demo</a></p>
+<p><a href="https://onlinegdb.com/Jy4N1oF19" rel="nofollow noreferrer">Interactive Demo</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>484</s> <s>468</s> <s>458</s> <s>426</s> 403 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>use std::io::{stdin,stdout,Write};use termion::{clear,cursor::Left,event::Key::{Backspace,Char},input::TermRead,raw::IntoRawMode};fn main(){let(mut o,mut l)=(stdout().into_raw_mode().unwrap(),0);for k in stdin().keys(){match k.unwrap(){Char(c)=&gt;{if c.is_digit(10){write!(o,&quot;*&quot;).unwrap();l+=1}}Backspace=&gt;{write!(o,&quot;{}{}&quot;,Left(1),clear::AfterCursor).unwrap();l-=1}_=&gt;()}o.flush().unwrap();if l&gt;3{break}}}
