--- a/q/275815.html
+++ b/q/275815.html
@@ -37,11 +37,11 @@
 <tr d-ix="8"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
 <tr d-ix="9"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 70 bytes</h1>
-<pre class="lang-javascript prettyprint-override"><code>s=&gt;console.log(s.replace(/\S+/g,s=&gt;`&#27;[38;5;${Math.random()*99|0}m`+s))
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <sub><s>85</s></sub> 70 bytes</h1>
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;console.log(s.replace(/\S+/g,s=&gt;`␛[38;5;${Math.random()*99|0}m`+s))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=XVBNSwMxEMVr_oKXEQS3tm4FEVpKvRT15KmCBz1smp3dRJPMmqRSUX-JlyL6o_TXOLsVFCHM8ObjvTd5ffdU4vqtmn4sU3Uw-jyL0xNFPpLF3FKdxTxgY6XCbHgz7w_rAfeL7euj0eR4svt0IZPOg_Qluay3Px4_H764oh97vQ3b19ZelRVXaBU5hEQgZqwG52Qr4CVgZHwNMy2tRV9jFPMk1R2crpSWjHdAiEttIvCTEE1CqChAQBVQJkNeWmgC1UE61xKxTIPJtJ04AOEpQY0ew7-x-yXGbib_Iw1uGRNo-YBsDQQtblElwygqCh15YP3Aa4POu0mtK21qbR9BsCVyDn2JZXtnZQKTNdSGQJy5rH6ljIekEebMs6BVDsXPf63Xm_wN" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>The code includes a raw ESC (0x1B) byte at the start of the template string.</p>
+<p>The <code>␛</code> is used as a placeholder for what should be a raw ESC (<code>0x1B</code>) byte, since Stack Exchange doesn't like to render control characters.</p>
 </div>
 <div id="pu1" class="pu"><h1>Uiua, <sub><s>41</s> <s>38</s> <s>33</s> </sub> 30 bytes</h1>
 <pre><code>&amp;p⍜⊜□⍚($&quot;\x1b[38;5;_m_&quot;⌈×99⚂)⊸&gt;@ 
