--- a/q/275821.html
+++ b/q/275821.html
@@ -37,11 +37,18 @@
 <tr d-ix="8"><td>043</td><td>><> Fish</td><td>240927T163730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275831#275831">value1</a></td></tr>
 <tr d-ix="9"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a> + coreutils, 24</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a> + <a href="https://www.gnu.org/software/coreutils/" rel="nofollow noreferrer">coreutils</a>, 24</h1>
 
 <pre class="lang-bash prettyprint-override"><code>seq 140|paste -d, - -|nl
 </code></pre>
 <p><a href="https://tio.run/##S0oszvj/vzi1UMHQxKCmILG4JFVBN0VHQVdBtyYv5/9/AA" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
+<hr />
+<h1>MacOS Shell and utilities, 20</h1>
+<pre class="lang-bash prettyprint-override"><code>seq 140|rs 70|nl -s,
+</code></pre>
+<p>Here, the paired-round delimiter is whitespace and the round number delimiter is <code>,</code>.</p>
+<p><code>rs</code> is a default tool in the MacOS shell.  It can also be installed on Linux, after which this answer will work there just as well.</p>
+<p><a href="https://tio.run/##S0oszvj/vzi1UMHQxKCmqFjB3KAmL0dBt1jn/38A" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 73 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 9.125 bytes</h1>
 <pre><code>70ƛd₍‹:&quot;ṄṪ
