--- a/q/275871.html
+++ b/q/275871.html
@@ -26,11 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>143</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
-<tr d-ix="1"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
-<tr d-ix="2"><td>031</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
+<tr d-ix="0"><td>029</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
+<tr d-ix="1"><td>143</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
+<tr d-ix="2"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 158 </s> <s> 144 </s> 143 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>31</s> 29 bytes</h1>
+<pre><code>Jm2BỊḄ&amp;þJ=J€$ḤṚ|Ɗị&quot;Ø^;;⁶Ʋ€UZY
+</code></pre>
+<p><a href="https://tio.run/##y0rNyan8/98r18jp4e6uhzta1A7v87L1etS0RuXhjiUPd86qOdb1cHe30uEZcdbWjxq3HdsElAqNivz/cPeWw@1Adtajxn1cXP//J3IlJadwZQCNyy/P50oEclLT0jMys7JzcvPyuUoyMotLUotLkhOLUzMSixNzUvPSSzKAokUllfl5qVxA@w8ve7hjvhHQUlUH4pwAAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p>Yikes... Still feels pretty golfable, but it might just be the wrong approach entirely.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 158 </s> <s> 144 </s> 143 bytes</h1>
 <p><em>-14 bytes by Unrelated String.</em><br />
 <em>-1 byte by emanresu A.</em></p>
 
@@ -38,7 +44,7 @@
 </code></pre>
 <p><a href="https://tio.run/##JcpBDoMgEEDRqxA3gBKNdtOYeBJkgYpKiwMZ2LRNz0413f3kv/BKu4fbPWDOaXD6mBZNYs@wH5wBFnnTdFzDIl09G0gGGZZd1fLVI3HEgowSlarkSptPQYrSfseRXtOek6CGzbBWoOj4pcpDB0YJrR/egnjbwBKLskfFxRVYtb3inCuPMqoc0EJidIS/Py3V07yYddvt4@kO8PTE@Qc" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 25 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 25 bytes</h1>
 <pre><code>Ｆ²ＦＬθ«Ｊκ⁻¹＆⊕κ±⊕κ¿ι§θκＰ^±ⅉ
 </code></pre>
 <p><a href="https://tio.run/##XU67DoIwFJ3hK@54m@Cgo0y4YcQ4uLiYNHCBhtJCe/ER47dXZHDwLCc5r5yyla60UodQWwe4EbDwgUzDLY5CwCuO9lM/nC12CRTKTB7XCewU35WnzFSYm9JRT4apwk4kcKRGMv3JX6RxpGpAJeDklGHMODcVPXBMYA6kQNoTFJNmNSz@9vobu@DSf4fArfJMnkvpqZVe6uXprDp@WkNhddMf" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -61,12 +67,6 @@
 </code></pre>
 <p>On the first pass, draw <code>/</code> and <code>\</code> diagonals down to the bottom line.</p>
 <p>Due to a bug in Charcoal, replacing <code>⁻¹</code> with <code>±</code> results in an extra trailing line of spaces.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 31 bytes</h1>
-<pre><code>Jm2æḟ2Ḥ%@þJ=J€$ḤṚ|Ɗị&quot;Ø^;;⁶Ʋ€UZY
-</code></pre>
-<p><a href="https://tio.run/##y0rNyan8/98r1@jwsoc75hs93LFE1eHwPi9br0dNa1SAvIc7Z9Uc63q4u1vp8Iw4a@tHjduObQJKhUZF/n@4e8vhdiA761HjPi6u//8TuZKSU7gygCbml@dzJQI5qWnpGZlZ2Tm5eflcJRmZxSWpxSXJicWpGYnFiTmpeeklGUDRopLK/LxUAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p>Yikes...</p>
 </div>
 
 <table id="st">
