--- a/q/275871.html
+++ b/q/275871.html
@@ -26,11 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>029</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
-<tr d-ix="1"><td>143</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
+<tr d-ix="0"><td>142</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
+<tr d-ix="1"><td>029</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
 <tr d-ix="2"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>31</s> 29 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 158 </s> <s> 144 </s> <s> 143 </s> 142 bytes</h1>
+<p><em>-14 bytes by Unrelated String.</em><br />
+<em>-2 bytes by emanresu A.</em></p>
+
+<pre class="lang-python prettyprint-override"><code>t=lambda s:(r:=len(s)//2)and[l.center(r-~r)for l in[s[r]]+[f'/{&quot; &quot;*i}\\'for i in range(1,r,2)]]+[*map(' '.join,zip(t(s[:r]),t(s[r+1:])))]or[s]
+</code></pre>
+<p><a href="https://tio.run/##JcpBDoMgEEDRqxA3gLUa7aYx8STIAhUViwMZ2LRNe3Wq6e4n//lnXB3c7h5Tip1V@zApElqGbWc1sMCrquEKJmHLUUPUyPD6RT47JJYYEEGglBcx0@qdkSw3n76n5zTHJKhg0awusGj4qfJdeUYJLTdnoHgZzyILokXJizPwUreScy4diiCTRwOR0R7@/rBUDeOk52U128Pu4OiB0w8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>31</s> 29 bytes</h1>
 <pre><code>Jm2BỊḄ&amp;þJ=J€$ḤṚ|Ɗị&quot;Ø^;;⁶Ʋ€UZY
 </code></pre>
 <p><a href="https://tio.run/##jU67agJBFO3nM4LG3lYESbm1FqYQrpubvbPOzsjOhXXFxiAEzA@ENDaSKlUIsrJgs@B/zP7IOGVKu/PinJOiUqX3UdZ/cvXeVbvH5hINo/btp@Oqozt/ba57V388NJ@zwaDdnq6/wZo8T72r/5r3gNN2exHCexDz@EVQqDOFERAIviYk04XKtBFM0jJajsEigQWFOmEKas6l0SjCfvPtqkM/jHZH910Q43@l0kJBZrmUOrFyxSVTjhgT5BAz5lYZnUire8wEDBmsQ@4G" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -57,14 +65,6 @@ Jm2BỊḄ               This creates a bitmask for the period of that column.
           Z     transpose,
            Y    and join on newlines.
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 158 </s> <s> 144 </s> 143 bytes</h1>
-<p><em>-14 bytes by Unrelated String.</em><br />
-<em>-1 byte by emanresu A.</em></p>
-
-<pre class="lang-python prettyprint-override"><code>t=lambda s:(r:=len(s)//2)and[l.center(r*2+1)for l in[s[r]]+[f'/{&quot; &quot;*i}\\'for i in range(1,r,2)]]+[*map(' '.join,zip(t(s[:r]),t(s[r+1:])))]or[s]
-</code></pre>
-<p><a href="https://tio.run/##JcpBDoMgEEDRqxA3gBKNdtOYeBJkgYpKiwMZ2LRNz0413f3kv/BKu4fbPWDOaXD6mBZNYs@wH5wBFnnTdFzDIl09G0gGGZZd1fLVI3HEgowSlarkSptPQYrSfseRXtOek6CGzbBWoOj4pcpDB0YJrR/egnjbwBKLskfFxRVYtb3inCuPMqoc0EJidIS/Py3V07yYddvt4@kO8PTE@Qc" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 25 bytes</h1>
 <pre><code>Ｆ²ＦＬθ«Ｊκ⁻¹＆⊕κ±⊕κ¿ι§θκＰ^±ⅉ
