--- a/q/275821.html
+++ b/q/275821.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>Lua</td><td>240930T084625Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275882#275882">138 Aspe</a></td></tr>
-<tr d-ix="1"><td>014</td><td>05AB1E</td><td>240930T075546Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275880#275880">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>033</td><td>Perl 5.10</td><td>240929T223805Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275875#275875">Kjetil S</a></td></tr>
+<tr d-ix="0"><td>037</td><td>Perl 5</td><td>240929T223805Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275875#275875">Kjetil S</a></td></tr>
+<tr d-ix="1"><td>058</td><td>Lua</td><td>240930T084625Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275882#275882">138 Aspe</a></td></tr>
+<tr d-ix="2"><td>014</td><td>05AB1E</td><td>240930T075546Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275880#275880">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>024</td><td>Bash + coreutils</td><td>240927T235348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275838#275838">Digital </a></td></tr>
 <tr d-ix="4"><td>017</td><td>Charcoal</td><td>240928T095502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275849#275849">Neil</a></td></tr>
 <tr d-ix="5"><td>010</td><td>Jelly</td><td>240928T183657Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275857#275857">Jonathan</a></td></tr>
@@ -39,14 +39,20 @@
 <tr d-ix="10"><td>043</td><td>><> Fish</td><td>240927T163730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275831#275831">value1</a></td></tr>
 <tr d-ix="11"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 58 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 37 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>say&quot;$_ &quot;,$_*2-1,&quot;,&quot;,$_*2for'01'..'70'
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH9/784sVJJJV5BSUclXstI11BHSQfCTMsvUjcwVNfTUzc3UP///19@QUlmfl7xf13fMlM9QwMA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 58 bytes</h1>
 <p>Thanks for @Jonathan Allan's comment for modification.</p>
 <hr />
 <p><a href="https://tio.run/##yylN/P8/Lb9IIdPWUMfcQCElX6GgKDOvRKO4BEil6wGlchNLNJRUjVJ0gFhJJ1PLSNcQRGpqpual/P8PAA" rel="nofollow noreferrer">Try it online!</a></p>
 <pre class="lang-lua prettyprint-override"><code>for i=1,70 do print(string.format(&quot;%2d,%2d&quot;,i*2-1,i*2))end
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 14 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 14 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <p>Left space padding for 1-9:</p>
 <pre><code>ƵdL2ôā2jøí',ý»
 </code></pre>
@@ -76,12 +82,6 @@
         J       # Join each pair together
 </code></pre>
 <p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (section <em>How to compress large integers?</em>)</a> to understand why <code>Ƶd</code> is <code>140</code>.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>.10, 33 bytes</h1>
-
-<pre class="lang-perl prettyprint-override"><code>say&quot;$_ &quot;,$_*2-1,&quot;,&quot;,$_*2for 1..70
-</code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/784sVJJJV5BSUclXstI11BHSQfCTMsvUjDU0zM3@P//X35BSWZ@XvF/Xd8yUz1DAwA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a> + <a href="https://www.gnu.org/software/coreutils/" rel="nofollow noreferrer">coreutils</a>, 24</h1>
 
