--- a/q/230438.html
+++ b/q/230438.html
@@ -76,6 +76,7 @@
 <tr d-ix="47"><td>164</td><td>TikZ</td><td>210626T160602Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/230556#230556">Wheat Wi</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1>Uiua, <sub><s>34</s> <s>33</s> <s>30</s></sub> 29 bytes</h1>
+<p><sub>or 26 bytes with uglier colors; read on</sub></p>
 <pre><code>▽34≡↯300↯6_3⍜⊏(÷2)4_15⋯181465
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_13_0-dev_2__4pa9MzTiiaHihq8zMDDihq82XzPijZziio8ow7cyKTRfMTXii68xODE0NjUK" rel="nofollow noreferrer">Try it!</a></p>
@@ -88,6 +89,8 @@ hex    #ff0000    #ff8000      #ffff00    #00ff00    #0000ff    #8000ff
 <pre><code>⋯181465  100110110010001101
 4_15         ^          ^
 </code></pre>
+<p>If you're okay with uglier colors, we can take the sin of those 1s instead, yielding this flag: <a href="https://uiua.org/pad?src=0_13_0-dev_2__4pa9MzTiiaHihq8zMDDihq82XzPijZziio_iiL80XzE14ouvMTgxNDY1Cg==" rel="nofollow noreferrer">pad</a></p>
+<p><a href="https://i.sstatic.net/6Dui2cBM.jpg" rel="nofollow noreferrer"><img src="https://i.sstatic.net/6Dui2cBM.jpg" alt="screenshot of flag with uglier colors" /></a></p>
 <p>It would be more efficient to double each number and treat it as an integer in base 3, but Uiua's function for conversion to arbitrary bases is <code>base</code> which is too long to be shorter. And currently, that function needs to be enabled with a <code># Experimental!</code> comment anyway; at that point, I could use experimental subscripts to write <code>(÷2)</code> as <code>÷₂</code>, which is even shorter.</p>
 <p>To generate the actual image, the program takes 300 of each color, then 34 of each row.</p>
 <p>Here's the output: (resized to take up less space on the page)</p>
