--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240930T150951Z
+"   /golfscore                                      20240930T155424Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/79609.html">Index of a multidimensional array               : 0079609</a>
 <a href="q/230438.html">Create a Pride Flag                             : 0230438</a>
 <a href="q/275821.html">BTD6 Kinetic Chaos (9/26/24 Odyssey)            : 0275821</a>
 <a href="q/275853.html">Score the science points in 7 Wonders           : 0275853</a>
