--- a/q/79609.html
+++ b/q/79609.html
@@ -78,6 +78,7 @@
 </blockquote>
 <p>The sole exception to this balanced pairing would be the central item - it only contains S1 without the corresponding D1.</p>
 <p>Otherwise, the count of <code>+</code>s, <code>*</code>s, <code>(</code>s, and <code>)</code>s all equal to <strong>Total Dimensions minus 1</strong>.</p>
+<p>When the dimension sizes are all the same, like in the 33570178 example, then it's just another way of doing base-6 to decimal conversion. List comprehensions on such a linear task is overkill.</p>
 </div>
 <div id="pu1" class="pu"><h2>Javascript, <strike>119</strike> 79 bytes</h2>
 <pre class="lang-js prettyprint-override"><code>x=(d,i)=&gt;{a=0;for(m in d){m*=1;a+=i[m];if(m!=i.length-1){a*=d[m+1];}}return a;}
