--- a/q/275821.html
+++ b/q/275821.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>061</td><td>Python 3</td><td>240930T185226Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275889#275889">&#205;ca</a></td></tr>
+<tr d-ix="0"><td>081</td><td>Python 3</td><td>240930T185226Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275889#275889">&#205;ca</a></td></tr>
 <tr d-ix="1"><td>037</td><td>Perl 5</td><td>240929T223805Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275875#275875">Kjetil S</a></td></tr>
 <tr d-ix="2"><td>058</td><td>Lua</td><td>240930T084625Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275882#275882">138 Aspe</a></td></tr>
 <tr d-ix="3"><td>014</td><td>05AB1E</td><td>240930T075546Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275880#275880">Kevin Cr</a></td></tr>
@@ -40,8 +40,8 @@
 <tr d-ix="11"><td>043</td><td>><> Fish</td><td>240927T163730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275831#275831">value1</a></td></tr>
 <tr d-ix="12"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python 3, <s>57 Bytes</s> 61 Bytes</h1>
-<pre><code>print(&quot;\n&quot;.join([f&quot;{n} {2*n-1},{2*n}&quot; for n in range(1,71)]))
+<div id="pu0" class="pu"><h1>Python 3, <s>57 Bytes</s> <s>61 Bytes</s> 81 Bytes</h1>
+<pre><code>print(&quot;\n&quot;.join([f&quot;{n}{' 'if n&lt;10 else ''} {2*n-1},{2*n}&quot; for n in range(1,71)]))
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 37 bytes</h1>
